--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    height: 120vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,7 +17,8 @@ body{
 {
     background-color:blanchedalmond;
     height: auto;
-    width: 60vh;
+    min-height: 80vh;
+    width: 55vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
